feat: add cross-domain authentication flow

--- a/apps/auth-client-astro/src/pages/index.astro
+++ b/apps/auth-client-astro/src/pages/index.astro
@@ -23,6 +23,9 @@
 		<pre id="whoami-result"></pre>
 		<hr />
 		<button class="hidden" id="logout-button">Logout</button>
+		<hr />
+		<button class="hidden" id="redirect-button">Allow to redirect</button>
+		<div id="redirect-form-container" class="hidden"></div>
 		<script src="../clientScripts/helper.ts"></script>
 		<style>
 			.hidden {
