--- a/apps/web-store-ssr-astro/src/layout/BaseLayout.astro
+++ b/apps/web-store-ssr-astro/src/layout/BaseLayout.astro
@@ -32,5 +32,10 @@ const { title } = Astro.props;
 				display: none;
 			}
 		</style>
+		<hr />
+		<h2>SSR User Info</h2>
+		<pre id="ssr-user-info">{
+		JSON.stringify(Astro.locals.user, null, 2)
+		}</pre>
 	</body>
 </html>
