I like UPPERCASE locals💩

--- a/apps/web-store-ssr-astro/src/layout/BaseLayout.astro
+++ b/apps/web-store-ssr-astro/src/layout/BaseLayout.astro
@@ -35,7 +35,7 @@ const { title } = Astro.props;
 		<hr />
 		<h2>SSR User Info</h2>
 		<pre id="ssr-user-info">{
-		JSON.stringify(Astro.locals.user, null, 2)
+		JSON.stringify(Astro.locals.USER, null, 2)
 		}</pre>
 	</body>
 </html>
