feat: enhance redirect button functionality and update its label

--- a/apps/auth-client-astro/src/pages/index.astro
+++ b/apps/auth-client-astro/src/pages/index.astro
@@ -24,7 +24,7 @@
 		<hr />
 		<button class="hidden" id="logout-button">Logout</button>
 		<hr />
-		<button class="hidden" id="redirect-button">Allow to redirect</button>
+		<button class="hidden" id="redirect-button">Sign in with Cart5.com</button>
 		<div id="redirect-form-container" class="hidden"></div>
 		<script src="../clientScripts/helper.ts"></script>
 		<style>
