--- a/apps/auth-client-astro/src/pages/index.astro
+++ b/apps/auth-client-astro/src/pages/index.astro
@@ -51,7 +51,21 @@
 		</a>
 		<hr />
 		<button id="whoami-button">Who am I</button>
+		<hr />
 		<pre id="whoami-result"></pre>
+		<hr />
+		<button class="hidden" id="get-new-two-factor-auth-button">
+			Two factor auth
+		</button>
+		<hr />
+		<div id="two-factor-auth-result"></div>
+		<form id="two-factor-auth-form" class="hidden">
+			<input type="text" name="encodedTOTPKey" />
+			<br />
+			<input type="text" name="userProvidedCode" />
+			<br />
+			<button type="submit">Verify</button>
+		</form>
 		<hr />
 		<button class="hidden" id="logout-button">Logout</button>
 		<hr />
